# crack-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  crack.py  fly.toml  pyproject.toml
app/: app.py  settings.py
app/ale/: crack.py
app/db/: s3.py
app/routers/: shared.py
app/routers/detection/: router.py  schema.py  utils.py
app/routers/health/: router.py  schema.py
