[tool.poetry]
name = "fiap-crack-detection"
version = "0.1.0"
description = ""
authors = ["coactive-victor <victor@coactive.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
boto3 = "^1.35.13"
pydantic-settings = "^2.3.4"
boto3-stubs = {extras = ["s3"], version = "^1.35.13.post1"}
pillow = "^10.4.0"
opencv-python = "^4.10.0.84"
numpy = "^2.1.1"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
ruff = "^0.4.8"

[tool.ruff]
line-length = 120
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev app/app.py --port 8000'
up = 'docker-compose up --build'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
